tests/snapshots/tui_move_select__move_select_reversed.snap
---
source: tests/tui_move_select.rs
expression: "harness.render(|frame| { views::commit_list::render(&mut app, frame); })"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 10 },
    content: [
        "SHA        Title                                                                ",
        "33333333   Newest commit (HEAD)                                                 ",
        "22222222   Middle commit                                                        ",
        "           ▶ move 33333333 here                                                 ",
        "11111111   Oldest commit on branch                                              ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        " Move 33333333 "Newest commit…" · ↑/↓ pick position · Enter confirm · Esc cancel",
    ],
    styles: [
        x: 0, y: 0, fg: White, bg: Green, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: White, bg: Rgb(0, 120, 120), underline: Reset, modifier: NONE,
        x: 8, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 1, fg: White, bg: Rgb(0, 120, 120), underline: Reset, modifier: NONE,
        x: 31, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 3, fg: White, bg: Rgb(40, 40, 100), underline: Reset, modifier: NONE,
        x: 31, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 9, fg: White, bg: Cyan, underline: Reset, modifier: NONE,
        x: 6, y: 9, fg: Gray, bg: Cyan, underline: Reset, modifier: NONE,
        x: 14, y: 9, fg: White, bg: Cyan, underline: Reset, modifier: NONE,
        x: 34, y: 9, fg: Gray, bg: Cyan, underline: Reset, modifier: NONE,
        x: 37, y: 9, fg: White, bg: Cyan, underline: Reset, modifier: NONE,
        x: 54, y: 9, fg: Gray, bg: Cyan, underline: Reset, modifier: NONE,
        x: 59, y: 9, fg: White, bg: Cyan, underline: Reset, modifier: NONE,
        x: 70, y: 9, fg: Gray, bg: Cyan, underline: Reset, modifier: NONE,
        x: 73, y: 9, fg: White, bg: Cyan, underline: Reset, modifier: NONE,
    ]
}
