tests/snapshots/tui_move_select__move_select_source_highlighted.snap
---
source: tests/tui_move_select.rs
expression: "harness.render(|frame| { views::commit_list::render(&mut app, frame); })"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 10 },
    content: [
        "SHA        Title                                                                ",
        "           ▶ move 22222222 here                                                 ",
        "11111111   Oldest commit on branch                                              ",
        "22222222   Middle commit                                                        ",
        "33333333   Newest commit (HEAD)                                                 ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        " Move 22222222 "Middle commit" · ↑/↓ pick position · Enter confirm · Esc cancel ",
    ],
    styles: [
        x: 0, y: 0, fg: White, bg: Green, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 1, fg: White, bg: Rgb(40, 40, 100), underline: Reset, modifier: NONE,
        x: 31, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: White, bg: Rgb(0, 120, 120), underline: Reset, modifier: NONE,
        x: 8, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 3, fg: White, bg: Rgb(0, 120, 120), underline: Reset, modifier: NONE,
        x: 24, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 9, fg: White, bg: Cyan, underline: Reset, modifier: NONE,
        x: 6, y: 9, fg: Gray, bg: Cyan, underline: Reset, modifier: NONE,
        x: 14, y: 9, fg: White, bg: Cyan, underline: Reset, modifier: NONE,
        x: 33, y: 9, fg: Gray, bg: Cyan, underline: Reset, modifier: NONE,
        x: 36, y: 9, fg: White, bg: Cyan, underline: Reset, modifier: NONE,
        x: 53, y: 9, fg: Gray, bg: Cyan, underline: Reset, modifier: NONE,
        x: 58, y: 9, fg: White, bg: Cyan, underline: Reset, modifier: NONE,
        x: 69, y: 9, fg: Gray, bg: Cyan, underline: Reset, modifier: NONE,
        x: 72, y: 9, fg: White, bg: Cyan, underline: Reset, modifier: NONE,
    ]
}
